Corrección de faltas ortográficas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <img src="images/Logo_Reseñas.png" alt="Loogo principal de la página" height="120">
+        <img src="images/Logo_Reseñas.png" alt="Logo principal de la página" height="120">
         <span>Las Mejores Reseñas</span>
         <nav>
             <ul>
