Modifiqué la página libros.html

--- a/páginas/libros.html
+++ b/páginas/libros.html
@@ -27,7 +27,13 @@
     </aside>
     <main>
         <h1>Reseñas Literarias</h1>
-        <p>Descubre tu próxima lectura favorita.</p>
+        <p>Descubre tu próxima lectura favorita con nuestras reseñas detalladas y opiniones sinceras sobre los libros
+            más destacados de diversos géneros.</p>
+
+        <p>En esta sección, encontrarás análisis de novelas recientes, clásicos y joyas escondidas que te ayudarán a
+            elegir tu próxima aventura literaria.</p>
+
+        <p>A continuación, algunas recomendaciones seleccionadas especialmente para ti:</p>
         <section>
             <h2>El Libro Secreto de Flora Lea</h2>
             <p><strong>Autor:</strong> Patti Callahan Henry</p>
