Modifique el nombre de las imágenes

--- a/páginas/libros.html
+++ b/páginas/libros.html
@@ -39,7 +39,7 @@
             <p><strong>Autor:</strong> Patti Callahan Henry</p>
             <p><strong>Género:</strong> Ficción histórica / Misterio / Drama familiar</p>
             <p><strong>Año de publicación:</strong> 2023</p>
-            <img src="/images/Libro1.webp" alt="El Libro Secreto de Flora Lea">
+            <img src="/images/El-libro-secreto-de-Flora-Lea-Portada.webp" alt="Portada Original El Libro Secreto de Flora Lea">
             <h3>Reseña</h3>
             <p>
                 <strong>El libro secreto de Flora</strong> Lea es una conmovedora novela que entrelaza el poder de las
@@ -70,7 +70,7 @@
             <p><strong>Serie:</strong> Independiente (standalone)</p>
             <p><strong>Idioma original:</strong> Inglés</p>
             <p><strong>Título original:</strong> The Deal</p>
-            <img src="/images/libro2.jpg" alt="Pacto con el jefe">
+            <img src="/images/pacto-con-el-jefe-Portada.jpg" alt="Portada Original de Pacto con el jefe">
             <h3>Reseña</h3>
             <p>
                 <strong>Pacto con el jefe</strong> es una novela romántica contemporánea que combina tensión, deseo y
@@ -101,7 +101,7 @@
             <p><strong>Editorial:</strong> Planeta</p>
             <p><strong>Año de publicación:</strong> 2024</p>
             <p><strong>Título original:</strong> The Instrumentalist</p>
-            <img src="/images/libro3.jpg" alt="La violinista">
+            <img src="/images/la-violinista-Portada.jpg" alt="Portada Original de La violinista">
             <h3>Reseña</h3>
             <p>
                 La violinista es una novela histórica que rescata del olvido la vida de Anna Maria della Pietà, una
