Arreglo de link

--- a/páginas/libros.html
+++ b/páginas/libros.html
@@ -116,7 +116,7 @@
                 explora la lucha de Anna Maria por encontrar su identidad y reconocimiento en un mundo dominado por
                 hombres, ofreciendo una perspectiva íntima de su vida y emociones.
             </p>
-            <a href="https://algunoslibrosbuenos.com/la-violinista">Para más información</a>
+            <a href="https://www.planetadelibros.com.ec/libro-la-violinista/404938">Para más información</a>
         </section>
     </main>
     <footer>
